@@ -38,6 +38,8 @@ public enum SQLiteOpenMode {
     CREATE(0x00000004), /* Ok for int SQLITE3_open_v2() */
     DELETEONCLOSE(0x00000008), /* VFS only */
     EXCLUSIVE(0x00000010), /* VFS only */
+    OPEN_URI(0x00000040), /* Ok for sqlite3_open_v2() */
+    OPEN_MEMORY(0x00000080), /* Ok for sqlite3_open_v2() */
     MAIN_DB(0x00000100), /* VFS only */
     TEMP_DB(0x00000200), /* VFS only */
     TRANSIENT_DB(0x00000400), /* VFS only */
